[package]
name = "SQLi_union"
version = "0.1.0"
edition = "2021"

[dependencies]
sqli = { path = "../Libraries/sqli/" }
my_request = { path = "../Libraries/my_request" }
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"
futures = "0.3.30"
tokio-stream = "0.1.15"
urlencoding = "2.1.3"
