[package]
name = "get_labs"
version = "0.1.0"
edition = "2021"

[dependencies]
my_request = { path = "../Libraries/my_request" }
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
anyhow = "1.0.86"
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.11.5"
