[package]
name = "integer_overflow"
version = "0.1.0"
edition = "2021"

[dependencies]
my_request = { path = "../Libraries/my_request" }
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["cookies"]}
scraper = "0.20.0"
tokio = { version = "1.39.3", features = ["full"] }
